# ssya

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: main.yml
images/: image.detector  image.visuals.json  validation.txt  vlcsnap-2024-06-25-23h29m10s666.visuals.json  vlcsnap-2024-06-25-23h29m18s636.visuals.json  vlcsnap-2024-06-25-23h29m42s570.visuals.json  vlcsnap-2024-06-25-23h30m00s296.visuals.json  vlcsnap-2024-06-25-23h30m05s355.visuals.json  vlcsnap-2024-06-25-23h30m09s559.visuals.json  vlcsnap-2024-06-25-23h30m12s431.visuals.json  vlcsnap-2024-06-25-23h30m25s662.visuals.json  vlcsnap-2024-06-25-23h30m26s835.visuals.json
ssya/: gui.py  main.py
ssya/controllers/: dataset_manager.py  features_index.py  sam2_wrapper.py
ssya/helpers/: metrics.py
ssya/models/: detection.py
ssya/sam_viewer/: __init__.py  main.py
ssya/sam_viewer/modules/: __init__.py  feature_matcher.py  image_navigator.py  sam_interface.py  yolo_parser.py
ssya/sam_viewer/ui/: __init__.py  main_window.py
ssya/widgets/: image_viewer.py
tests/: test_template.py
tests/unit/sam_viewer/: __init__.py  test_feature_matcher.py  test_image_navigator.py  test_sam_interface.py  test_yolo_parser.py
